# word2vec

./: CMakeLists.txt  LICENSE  README.md
doc2vec/: CMakeLists.txt  doc2vec.cpp  doc2vec.h
doc2vecTrainer/: CMakeLists.txt  doc2vecTrainer.cpp  doc2vecTrainer.h  main.cpp
examples/doc2vec/: CMakeLists.txt  main.cpp
examples/doc2vec/texts/: bbc_brazil_meat.txt  bbc_india_cannabis.txt  bbc_orly_shooting.txt  cnbc_orly_shooting.txt  cnn_formula1.txt  cnn_orly_shooting.txt  independent_orly_shooting.txt  nyt_orly_bombing.txt
examples/postgresql/: Makefile  doc2vec.cpp  pg_doc2vec--1.0.1.sql  pg_doc2vec.control  pg_doc2vec.cpp  word2vec.cpp  wordReader.cpp
examples/word2vec/: CMakeLists.txt  main.cpp
include/: mapper.hpp  word2vec.h  word2vec.hpp  wordReader.hpp
lib/: CMakeLists.txt  downSampling.h  downSampling.hpp  huffmanTree.cpp  huffmanTree.h  huffmanTree.hpp  mapper.cpp  mapper.h  nsDistribution.cpp  nsDistribution.h  trainThread.cpp  trainThread.h  trainThread.hpp  trainer.cpp  trainer.h  trainer.hpp  vocabulary.cpp  vocabulary.h  vocabulary.hpp  word2vec.cpp  wordReader.h
lib/win/: mman.cpp  mman.h
tools/: CMakeLists.txt  accuracy.cpp  analogy.cpp  distance.cpp  trainer.cpp
word2vec/: CMakeLists.txt  word2vec.cpp  word2vec.h
word2vecTrainer/: CMakeLists.txt  main.cpp  word2vecTrainer.cpp  word2vecTrainer.h
wordReader/: CMakeLists.txt  wordReader.cpp  wordReader.h  wrErrors.h
